--- a/css/style.css
+++ b/css/style.css
@@ -1,125 +1,94 @@
-            html {
-                box-sizing: border-box;
-            }
-            
             *,
             *:before,
             *:after {
-                box-sizing: inherit;
+                box-sizing: border-box;
             }
             
             body {
-                background: #FFFFFF;
-                font-family: 'TT Lakes', sans-serif;
+                font-family: TT Lakes;
+                font-size: 14px;
+                line-height: 18px;
+                letter-spacing: 0.2px;
                 margin: 0;
+            }
+            
+            .inner-wrapper {
+                max-width: 1058px;
+                min-width: 288px;
+                margin: 0 16px;
+            }
+            
+            .main {
+                background: #F8F8F8;
+                position: relative;
+            }
+            
+            .divider-blue::before {
+                content: '';
+                position: absolute;
+                width: 4px;
+                height: 40px;
+                background: #41F6D7;
+                left: 0;
+                border-radius: 0 0.25rem 0.25rem 0;
+            }
+            
+            .divider-right::before {
+                content: '';
+                height: 32px;
+                width: 2px;
+                top: 6px;
+                left: -40%;
+                background: #EAEAEA;
+                border-radius: 1px;
+                position: absolute;
             }
             /*HEADER*/
             
             .header {
-                margin-left: 16px;
-                margin-right: 16px;
-            }
-            
-            .header__btn,
-            .main__btn {
-                border: medium none;
-                background-image: none;
-                background: transparent;
-                background-color: transparent;
-            }
-            
-            .header__nav {
-                display: flex;
-                justify-content: space-between;
-            }
-            
-            .header__inner {
-                display: flex;
-                gap: 16px;
-            }
-            
-            .header__item--item--visibility {
-                display: none;
-            }
-            
-            .header__list {
-                display: flex;
-                list-style: none;
-                padding: 0;
-                gap: 16px;
-            }
-            /*MAIN*/
-            
-            .main {
-                width: 100%;
-                background-color: #F8F8F8;
-            }
-            
-            .inner-wrapper {
-                width: 96%;
-            }
-            
-            .main__header-menu {
-                max-height: 88px;
-                margin-bottom: 32px;
+                background: #FFFFFF;
             }
             
             .main__header {
                 display: flex;
                 justify-content: space-between;
-                align-items: center;
-                flex-wrap: wrap;
+                align-items: baseline;
             }
             
             .main__inner {
                 display: flex;
-                justify-content: center;
-                align-items: center;
+                justify-content: space-between;
                 gap: 32px;
             }
             
-            .main__title {
-                font-family: TT Lakes;
-                font-size: 28px;
-                line-height: 40px;
-                /* identical to box height, or 143% */
-                letter-spacing: -0.6px;
-                color: #1B1C21;
-                margin: 0;
-            }
-            /* .main__nav-menu,
-            .main__content {
-                margin-left: 24px;
-            } */
-            
-            .main__btn--btn--visibility {
-                display: none;
-            }
-            
-            .main__menu-list {
+            .header__nav {
                 display: flex;
                 justify-content: space-between;
-                align-items: center;
+                margin-top: 24px;
+                margin-bottom: 24px;
+            }
+            
+            .header__list {
+                display: flex;
                 list-style: none;
-                height: 40px;
-                overflow: auto;
+                margin: 0;
                 padding: 0;
             }
             
-            .main__nav-btn {
-                border: medium none;
-                background-image: none;
-                background: transparent;
-                background-color: transparent;
-                border-radius: 6px;
-                font-family: TT Lakes;
-                font-size: 16px;
-                line-height: 24px;
-                /* identical to box height, or 150% */
-                letter-spacing: -0.2px;
-                color: #7E7E82;
-                white-space: nowrap;
-                cursor: pointer;
+            .header__item {
+                position: relative;
+            }
+            /* MAIN */
+            
+            .main__title {
+                font-size: 28px;
+                line-height: 40px;
+                letter-spacing: -0.6px;
+                color: #1B1C21;
+            }
+            
+            .main__nav-menu {
+                overflow: auto;
             }
             
             .main__nav-btn:focus {
@@ -132,6 +101,74 @@
                 border-radius: 6px;
             }
             
+            .main__menu-list {
+                display: flex;
+                list-style: none;
+                margin: 0;
+                padding: 0;
+                gap: 20px;
+            }
+            
+            .main__content {
+                margin-top: 24px;
+            }
+            
+            .main__text {
+                font-size: 14px;
+                line-height: 20px;
+                letter-spacing: 0.2px;
+                color: #1B1C21;
+            }
+            
+            .main__text-btn {
+                margin-top: 16px;
+                font-size: 16px;
+                line-height: 24px;
+                letter-spacing: -0.2px;
+                color: #1B1C21;
+                padding: 0;
+                cursor: pointer;
+            }
+            
+            .main__content-img {
+                margin-top: 16px;
+            }
+            
+            .header__btn,
+            .main__btn {
+                border: none;
+                background-image: none;
+                background: transparent;
+                background-color: transparent;
+            }
+            
+            .header__item--item--visibility {
+                display: none;
+            }
+            
+            .main__btn--btn--visibility {
+                display: none;
+                cursor: pointer;
+            }
+            
+            .main__nav-btn {
+                border: none;
+                background-image: none;
+                background: transparent;
+                background-color: transparent;
+                border-radius: 6px;
+                font-family: TT Lakes;
+                font-size: 16px;
+                line-height: 24px;
+                letter-spacing: -0.2px;
+                color: #7E7E82;
+                white-space: nowrap;
+                height: 40px;
+                left: 266px;
+                right: 622px;
+                cursor: pointer;
+            }
+            
             .main__img--lg--visibility,
             .main__img--md--visibility {
                 display: none;
@@ -141,17 +178,8 @@
                 display: none;
             }
             
-            .main__content-text {
-                font-family: TT Lakes;
-                font-size: 14px;
-                line-height: 20px;
-                /* or 143% */
-                letter-spacing: 0.2px;
-                color: #1B1C21;
-            }
-            
             .main__text-btn {
-                border: medium none;
+                border: none;
                 background-image: none;
                 background: transparent;
                 background-color: transparent;
@@ -171,46 +199,13 @@
                 display: none;
             }
             
-            .main__content {
-                gap: 16px;
-            }
-            
             .main__img main__img--lt--visibility {
                 display: block;
             }
-            
-            .main__title::before {
-                content: '';
-                border-right: 4px solid #41F6D7;
-                height: 2.5rem;
-                border-radius: 0 0.25rem 0.25rem 0;
-                margin-right: 0.75rem;
-            }
             /*MEDIA*/
-            
-            @media (max-width: 767px) {
-                .main__content {
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: space-between;
-                    align-items: flex-start;
-                    gap: 16px;
-                }
-                .divider::before {
-                    content: '';
-                    border-right: 4px solid #41F6D7;
-                    height: 2.5rem;
-                    border-radius: 0 0.25rem 0.25rem 0;
-                    margin-right: 0.75rem;
-                }
-            }
+            /* @media (max-width: 767px) {} */
             
             @media (min-width: 768px) {
-                .main__content {
-                    display: flex;
-                    justify-content: space-between;
-                    gap: 16px;
-                }
                 .header__item--item--visibility {
                     display: block;
                 }
@@ -224,30 +219,31 @@
                 .main__text--text--visibility {
                     display: block;
                 }
-                .main__content-text {
-                    width: 312px;
-                    height: 160px;
-                }
-                .main__content-img {
-                    width: 360px;
-                    height: 208px;
+                .main__content {
+                    display: flex;
+                    gap: 48px;
                 }
                 .header__item--item--size {
-                    margin-right: 26px;
+                    margin-right: 42px;
+                }
+                .inner-wrapper {
+                    margin: 0 25px;
+                }
+                .divider-left::before {
+                    content: '';
+                    height: 32px;
+                    width: 2px;
+                    top: 6px;
+                    right: -40%;
+                    background: #EAEAEA;
+                    border-radius: 1px;
+                    position: absolute;
                 }
             }
             
             @media (min-width: 1120px) {
                 .header {
                     display: none;
-                }
-                .main {
-                    padding-top: 42px;
-                    padding-left: 32px;
-                    padding-right: 32px;
-                }
-                .main__menu-list {
-                    flex-wrap: wrap;
                 }
                 .main__img--lg--visibility {
                     display: block;
@@ -261,15 +257,6 @@
                 }
                 .main__btn--btn--visibility {
                     display: block;
-                    cursor: pointer;
-                }
-                .main__content-text {
-                    width: 490px;
-                    height: 160px;
-                }
-                .main__content-img {
-                    width: 532px;
-                    height: 307px;
                 }
                 .main__btn {
                     display: flex;
@@ -283,5 +270,12 @@
                     letter-spacing: -0.2px;
                     color: #1B1C21;
                     font-weight: 600;
+                }
+                .main__content {
+                    display: flex;
+                    gap: 36px;
+                }
+                .main__menu-list {
+                    flex-wrap: wrap;
                 }
             }
